mail/postfixadmin-deployment.yaml
# mail/postfixadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postfixadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postfixadmin
  template:
    metadata:
      labels:
        app: postfixadmin
    spec:
      containers:
      - name: postfixadmin
        image: postfixadmin:3.3
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /var/www/html/config.local.php
          subPath: config.local.php
        - name: data-volume
          mountPath: /var/www/html
      volumes:
      - name: config-volume
        configMap:
          name: postfixadmin-config
      - name: data-volume
        persistentVolumeClaim:
          claimName: postfixadmin-pvc
