mail/rainloop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rainloop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rainloop
  template:
    metadata:
      labels:
        app: rainloop
    spec:
      containers:
        - name: rainloop
          image: ghcr.io/newargus/docker-rainloop:latest
          ports:
            - containerPort: 8888
          volumeMounts:
            - name: rainloop-data
              mountPath: /rainloop/data
      volumes:
        - name: rainloop-storage
          persistentVolumeClaim:
            claimName: rainloop-pvc
