mail/docker-mailserver.yaml
# mail/docker-mailserver.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: mailserver
spec:
  selector:
    app: mailserver
  ports:
    - name: smtp
      port: 25
      targetPort: 25
    - name: imap
      port: 143
      targetPort: 143
    - name: smtps
      port: 465
      targetPort: 465
    - name: submission
      port: 587
      targetPort: 587
    - name: imaps
      port: 993
      targetPort: 993
    - name: pop3
      port: 110
      targetPort: 110
    - name: pop3s
      port: 995
      targetPort: 995
    - name: sieve
      port: 4190
      targetPort: 4190
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailserver
  template:
    metadata:
      labels:
        app: mailserver
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: mailserver
          image: mailserver/docker-mailserver:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 25
            - containerPort: 143
            - containerPort: 465
            - containerPort: 587
            - containerPort: 993
            - containerPort: 110
            - containerPort: 995
            - containerPort: 4190
          volumeMounts:
            - name: mail-data
              mountPath: /var/mail
            - name: mail-config
              mountPath: /tmp/docker-mailserver
      volumes:
        - name: mail-data
          persistentVolumeClaim:
            claimName: mail-data-pvc
        - name: mail-config
          emptyDir: {}
