mail/dovecot-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dovecot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dovecot
  template:
    metadata:
      labels:
        app: dovecot
    spec:
      containers:
        - name: dovecot
          image: tvial/docker-mailserver:latest
          ports:
            - containerPort: 143
          volumeMounts:
            - name: dovecot-storage
              mountPath: /var/mail
            - name: dovecot-config
              mountPath: /etc/dovecot/dovecot.conf
              subPath: dovecot.conf
      volumes:
        - name: dovecot-storage
          persistentVolumeClaim:
            claimName: dovecot-pvc
        - name: dovecot-config
          configMap:
            name: dovecot-config

---
apiVersion: v1
kind: Service
metadata:
  name: dovecot
spec:
  selector:
    app: dovecot
  ports:
    - protocol: TCP
      port: 143
      targetPort: 143
