mail/postfix-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postfix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postfix
  template:
    metadata:
      labels:
        app: postfix
    spec:
      containers:
        - name: postfix
          image: boky/postfix
          ports:
            - containerPort: 25
            - containerPort: 587
---
apiVersion: v1
kind: Service
metadata:
  name: postfix
spec:
  selector:
    app: postfix
  ports:
    - name: smtp
      protocol: TCP
      port: 25
      targetPort: 25
    - name: submission
      protocol: TCP
      port: 587
      targetPort: 587
