mail/postfixadmin-service.yaml
# mail/postfixadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postfixadmin
spec:
  selector:
    app: postfixadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
