mail/postfixadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postfixadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postfixadmin
  template:
    metadata:
      labels:
        app: postfixadmin
    spec:
      containers:
      - name: postfixadmin
        image: postfixadmin:3.3
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /var/www/html/config/config.local.php
          subPath: config.local.php
      volumes:
      - name: config-volume
        configMap:
          name: postfixadmin-config
---
apiVersion: v1
kind: Service
metadata:
  name: postfixadmin
spec:
  selector:
    app: postfixadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
