mail/rainloop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rainloop
spec:
  selector:
    app: rainloop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
