mail/ingress.yaml
# mail/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mail-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-http"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - mail.foson.co
        - admin.mail.foson.co
      secretName: mail-tls
  rules:
    - host: mail.foson.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rainloop
                port:
                  number: 80
    - host: admin.mail.foson.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postfixadmin
                port:
                  number: 80
